# dbt-airflow-macros

./: .gitignore  .yamllint  Makefile  README.md  dbt_package.yml  dbt_project.yml  pyproject.toml  tox.ini
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: generate-markdown-toc.yml  labeler.yml  merge-staging-into-main.yml  test.yml
ci/: install_pyenv.sh  install_python_modules.sh  lint_yaml.sh  setup.sh
ci/etc/: profiles.yml
dev/: requirements-0.17.2.txt  requirements-0.18.txt  requirements-0.19.txt  requirements-dev.txt  setup.sh
dev/requirements/: requirements-0.17.txt  requirements-0.18.txt  requirements-0.19.txt  requirements-0.20.txt  requirements-0.21.txt  requirements-1.0.txt  requirements-1.1.txt  requirements-1.10.txt  requirements-1.9.txt  requirements-test.txt
integration_tests/postgres/: Makefile  dbt_project.yml  packages.yml  run_tests.sh
integration_tests/postgres/macros/: run_unit_tests.sql
integration_tests/postgres/macros/tests/: test__convert_tz.sql  test__format_dt.sql  test__get_datetime_set.sql  test__get_datetime_unset.sql  test_ds.sql  test_ds_nodash.sql  test_execution_date.sql  test_ts.sql  test_ts_nodash.sql
integration_tests/postgres/models/: test_macros.sql  test_macros.yml
integration_tests/postgres/profiles/: profiles.yml
macros/: _convert_tz.sql  _format_datetime.sql  _format_dt.sql  _get_datetime.sql  ds.sql  ds.yml  ds_nodash.sql  ds_nodash.yml  execution_date.sql  execution_date.yml  ts.sql  ts.yml  ts_nodash.sql  ts_nodash.yml
