[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-airflow-macros"
description = "dbt macros inspired by Apache Airflow"
readme = "README.md"
version = "0.3.0-dev"

[tool.setuptools.packages.find]
include = []
exclude = ['dev', 'macros', 'integration_tests']
